--- a/cancer_analyse.html
+++ b/cancer_analyse.html
@@ -2959,11 +2959,7 @@ importance of the variables</p>
 </ul>
 <p>One observation that can be made is that these variables are all
 among those that contribute the most to the first two principal
-components and also among those that are best represented by them.
-Better still, the most important variable, namely
-<strong>perimeter_worst</strong>, is also the one that is best
-represented in the first 2 principal components and also the one that
-contributes the most</p>
+components and also among those that are best represented by them.</p>
 </div>
 </div>
 </div>
